deployment/manifests/k8_keda_main.yml
apiVersion: v1
kind: Service
metadata:
  name: sidmlbackend-http
  namespace: ml-app
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: sidmlbackend-http
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: sidmlbackend-http
  name: sidmlbackend-http
  namespace: ml-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sidmlbackend-http
  template:
    metadata:
      labels:
        app: sidmlbackend-http
    spec:
      containers:
      - env:
        - name: AzureFunctionsJobHost__functions__0
          value: main
        - name: AzureWebJobsSecretStorageType
          value: kubernetes
        - name: AzureWebJobsKubernetesSecretName
          value: secrets/func-keys-kube-secret-sidmlbackend
        - name: MODEL_SERVICE
          value: twolvlImp
        image: acrmlbackend.azurecr.io/sidmlbackend:latest
        name: sidmlbackend-http
        ports:
        - containerPort: 80
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /
            port: 80
            scheme: HTTP
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 240
        resources:
          limits:
            cpu: 1500m
            memory: 3000Mi
          requests:
            cpu: 1200m
            memory: 1500Mi
        startupProbe:
          failureThreshold: 3
          httpGet:
            path: /
            port: 80
            scheme: HTTP
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 240
        volumeMounts:
        - mountPath: /mnt/azure/datasets
          name: azure
      serviceAccountName: sidmlbackend-function-keys-identity-svc-act
      volumes:
      - csi:
          driver: blob.csi.azure.com
          volumeAttributes:
            containerName: datasets
            mountOptions: -o allow_other --file-cache-timeout-in-seconds=120
            secretName: azure-secret
        name: azure
