deployment/manifests/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: '0'
    nginx.ingress.kubernetes.io/proxy-read-timeout: '600'
    nginx.ingress.kubernetes.io/proxy-send-timeout: '600'
    nginx.ingress.kubernetes.io/use-regex: 'true'
  name: ingress-ml-backend-http
  namespace: ml-app
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - backend:
          service:
            name: ml-backend-http
            port:
              number: 80
        path: /twolvlImp/(.*)
        pathType: Prefix
      - backend:
          service:
            name: ml-backend-http
            port:
              number: 80
        path: /(.*)
        pathType: Prefix
      - backend:
          service:
            name: sampleapi-service
            port:
              number: 80
        path: /sampleapi/(.*)
        pathType: Prefix
      - backend:
          service:
            name: sids-survey-backend
            port:
              number: 80
        path: /SurveyCluster/(.*)
        pathType: Prefix
  tls:
  - hosts:
    - ml-aks-ingress.eastus.cloudapp.azure.com
    secretName: aks-ingress-tls
